[package]
name = "embassy-aiqc"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "stm32h755zi-cm7",
    "time-driver-tim3",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { version = "0.8.0", features = [
    "defmt",
    "dns",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# MQTT support
rust-mqtt = { version = "0.4.1", default-features = false, features = [
    "defmt",
    "bump",
    "v5",
] }

# TLS support
embedded-tls = { version = "0.18.0", default-features = false, features = [
    "defmt",
] }

# NTP and time support
chrono = { version = "0.4", default-features = false }
sntpc = { version = "0.8", default-features = false, features = ["defmt"] }
sntpc-net-embassy = { version = "0.8", default-features = false, features = ["defmt"] }

# Supplemental crates for embassy-net stack
embedded-io-async = { version = "0.7.0" }
static_cell = "2"

# Crates for protobuf
heapless = "0.9"
micropb = { version = "0.6.0", features = ["container-heapless-0-9"] }

[build-dependencies]
# Crates for protobuf
micropb-gen = "0.6.0"

# cargo build/run --release
[profile.release]
codegen-units = 16
debug = 2
debug-assertions = false # <-
incremental = false
opt-level = 3            # <-
overflow-checks = false  # <-
